--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,6 +100,8 @@
     "new": "cpp",
     "numbers": "cpp",
     "stdexcept": "cpp",
-    "streambuf": "cpp"
+    "streambuf": "cpp",
+    "cstring": "cpp",
+    "ctime": "cpp"
   }
 }
